crates/toml_edit/tests/snapshots/invalid/integer/trailing-us.stderr
TOML parse error at line 1, column 18
  |
1 | trailing-us = 123_
  |                  ^
`_` may only go between digits, expected nothing
